--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "desafio-estagio-matheuspl",
   "version": "1.0.0",
   "description": "Este projeto é um desafio com a finalidade de avaliação para o cargo de estagiário fullstack na SoftMakers.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/matheuspl92/desafio-estagio-matheuspl#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
     "pg": "^8.8.0",
     "sequelize": "^6.25.3"
   }
