--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.11.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "prisma": "^4.5.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@prisma/client": "^4.5.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
