--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "lint:fix": "eslint --fix ./*.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,13 @@
     "nodemon": "^2.0.20",
     "sequelize": "^6.25.5",
     "sqlite3": "^5.1.2"
-  }
+  },
+  "devDependencies": {
+    "eslint": "^8.27.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.0",
+    "eslint-plugin-promise": "^6.1.1"
+  },
+  "type": "module"
 }
