--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/larissaassilva/desafio-estagio#readme",
   "dependencies": {
-    "bootstrap": "^5.2.3"
+    "bootstrap": "^5.3.0-alpha2"
   },
   "devDependencies": {
     "eslint": "^8.36.0"
