--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.2.0",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
