--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,4 +1,9 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "printWidth": 80,
+  "tabWidth": 2,
+  "singleQuote": false,
+  "arrowParens": "always",
+  "semi": false,
+  "endOfLine": "auto"
 }
