--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,17 @@ services:
     depends_on:
       - db
     networks:
-      - back
+      softpet:
+        aliases:
+          - back
   front:
     build: ./front
     ports:
       - 3001:3001
+    networks:
+      softpet:
+        aliases:
+          - front
   db:
     image: postgres:latest
     environment:
@@ -21,10 +27,10 @@ services:
     ports:
       - 5432:5432
     networks:
-      back:
+      softpet:
         aliases:
           - db
 
 
 networks:
-  back:
+  softpet:
