--- a/softpet/backend/package.json
+++ b/softpet/backend/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.9.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
